2008-04-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Optimized text editor drawing a
	  bit. Worked on folding preview.

2008-04-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed some selection issues in
	  some commands.

2008-04-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs:
	  fixed 'Bug 376331 - Middle-click paste should not change
	  selection'.

2008-04-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs,
	  Mono.TextEditor/LineSegment.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed 'Bug 376329 -
	  Folded region tooltip readability issues'

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed 'Bug 324272 - in search and
	  replace, parenthesis matching should be disabled'

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs: worked on  bug 'Bug 376136 - Array
	  out of bounds selecting text'.

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/IMargin.cs,
	  Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs: Optimized preview
	  window a bit.

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/IMargin.cs,
	  Mono.TextEditor/CodeSegmentPreviewWindow.cs,
	  Mono.TextEditor/LineSegmentTree.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs, Makefile.am: Added
	  preview window for collapsed regions (feature request 363639).

2008-03-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Removed debug message.

2008-03-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSegmentTree.cs: fixed Bug 372273 - MD crash.
